	Rick Widmer
	- vpopmaild: remove debug output from find_domain function.

	Jeremy Kister
	- vdelivermail: pass qmail-inject's error code instead of always
	  deferring. [1484105]

	Ron Gage
	- vmysql: reconnect to server if connection timed out.

	Rolf Eike Beer
	- vchangepw: add error checking and other code improvements.
	  [1371572]
	- change API for vgetpasswd() to make more sense. [1371566]

	secnetdk
	- vmysql, vpgsql: remove entries from vlog when deleting a domain
	  or a user. [1099800, 995762]

	Michael Krieger
	- vcdb, vpopmail: pass mode to open() when creating files.  Fixes
	  bug where lock files were created with 0000 permissions. [1499043]
	- vpalias: set mydir to NULL after closing it. [1499045]

	Tom Collins
	- vpalias: don't trash alias name passed to valias_insert().
	  [1491087]
	- vpopmaild: don't show last auth if auth-logging disabled.
	  [1511313]
	- Only include err.h if it's present. [1484110]

5.4.16 - released 7-May-06

	Michael Krieger
	- vpalias: Properly handle some empty search results.

	Ken Jones
	- vpalias: wasn't allocating enough memory for alias name in
	  valias_select_names (missing one byte for NULL). [1479842]

	Jianbin Xiao
	- vmysql: reconnect to server if connection was dropped.
	  [1469731]

	Rick Widmer
	- vpgsql: fix queries to allow domains starting with digits.

	John Simpson
	- vpgsql: fix compile errors introduced in 5.4.14.
	- vdominfo: undo change from 5.4.14 that displayed alias domains
	  incorrectly.

	Toshihiko Kyoda
	- vdelivermail: check for over quota when creating temp mail file.

	Tom Collins
	- vpalias: Fix double-free in code ported from 5.5 branch.
	- valias: exit non-zero on error, send all errors to stderr.
	- vchkpw: make sure we have cleartext pass before checking SMTP_AUTH
	  or APOP logins. [1453216]
	- Remove vactivedir code since it's just a client for a non-existent
	  server.

5.4.15 - released 24-Feb-06

	Tom Collins
	- Add 'compile' script to distribution.