@@ -17,6 +17,8 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- vchangepw: add error checking and other code improvements.
 	  [1371572]
 	- change API for vgetpasswd() to make more sense. [1371566]
+	- Update del_control() to properly handle remove_lines() return
+	  value. [1514613]
 
 	secnetdk
 	- vmysql, vpgsql: remove entries from vlog when deleting a domain
